--- a/src/pages/Cancioneiro/Cancioneiro.module.css
+++ b/src/pages/Cancioneiro/Cancioneiro.module.css
@@ -165,6 +165,10 @@
     flex-direction: column;
   }
 
+  .searchWrapper {
+    width: 100%;
+  }
+
   .builderBtn {
     width: 100%;
     justify-content: center;
